--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Built &amp; Developed by</span>
+      <span>Original Design credits to</span>
     </div>
     <div class="bottom">
-      <span>Amit Shanbhoug</span>
+      <span>Brittany Chiang</span>
       <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
-      <span>2021</span>
+      <span>2018</span>
     </div>
   </div>
   <div class="footer__links">
