--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,23 +2,24 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm currently a Researcher at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
-      <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
-      <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
+      I'm currently a Researcher at <a class="underline-link" href="https://www2.uottawa.ca/en" target="_blank">uOttawa</a> exploring SMART/IOT solutions for long-term care homes. I previously interned at 
+      <a class="underline-link" href="https://www.delphicresearch.ca/" target="_blank">Delphic Research</a> building in the government affairs space.
     </p>
 
     <p>
       I enjoy working at the intersection of product, strategy &mdash; engineering, combining my technical knowledge
-      with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable
-      and efficient under the hood while providing engaging, pixel-perfect user experiences.
+      with my keen eye for design to create a beautiful product. My goal is to always build accesible and high-impact products 
+      that are scalable.
     </p>
 
     <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.
+      Giving back to my community is important to me. I am currently the Co-Chair, Board of Directors at
+      <a class="underline-link" href="https://canadianroots.ca/" target="_blank">Canadian Roots Exchange</a>, an organization committed to 
+      empowering Indigenous youth and reconciliation.
+    </p>
+
+    <p>
+      <strong>When I'm not in front of my laptop</strong>, I'm probably playing chess, watching Man United, or editing resumes.
     </p>
 
     <!-- {% include employment-status.html %} -->
