--- a/_includes/background.html
+++ b/_includes/background.html
@@ -7,13 +7,13 @@
     </p>
 
     <p>
-      I enjoy working at the intersection of product, strategy &mdash; engineering, combining my technical knowledge
-      with my keen eye for design to create a beautiful product. My goal is to always build accesible and high-impact products 
-      that are scalable.
+      I enjoy working at the intersection of product, strategy &mdash; engineering, pairing my technical knowledge
+      with my keen eye for design to create a beautiful product. As a decisive thinker who enjoys problem solving in fast-paced environments,
+      my goal is to always build accesible and high-impact products that are scalable.
     </p>
 
     <p>
-      Giving back to my community is important to me. I am currently the Co-Chair, Board of Directors at
+      Volunteering is important to me. I am currently the Co-Chair, Board of Directors at
       <a class="underline-link" href="https://canadianroots.ca/" target="_blank">Canadian Roots Exchange</a>, an organization committed to 
       empowering Indigenous youth and reconciliation.
     </p>
