--- a/_includes/workexperience.html
+++ b/_includes/workexperience.html
@@ -2,7 +2,7 @@
   <div class="section__title">Work Experience</div>
   <div class="section__content">
     <div class="jobs">
-      {% for job in site.data.experience %}
+      {% for job in site.data.workexperience %}
       <div class="job">
         <div class="time-place">
           <div class="job__company">
