--- a/_includes/boardexperience.html
+++ b/_includes/boardexperience.html
@@ -15,6 +15,6 @@
       {% endfor %}
     </div>
 
-    <a href="{{site.newresume.pdf}}" target="_blank" class="arrow-link">View My Resume</a>
+    <a href="{{site.newresume}}" target="_blank" class="arrow-link">View My Resume</a>
   </div>
 </section>
