--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,7 +1,6 @@
 <section class="section skills">
-  <div class="section__title">Skills</div>
+  <div class="section__title">Skills & Interests</div>
   <div class="section__content">
-    <!-- <p>I’ve picked up a few skills during the course of my three co-ops, and aim to improve these skills everyday. Here are a few of the technologies that I have experience with:</p> -->
     <div class="skillz">
       <div class="skillz__category">
         <div class="skillz__category__label">Languages</div>
@@ -31,6 +30,14 @@
         <div class="skillz__category__label">Product</div>
         <ul>
           {% for thing in site.data.skills.product %}
+          <li class="skillz__category__item">{{thing.item}}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="skillz__category">
+        <div class="skillz__category__label">Interests</div>
+        <ul>
+          {% for thing in site.data.skills.interests %}
           <li class="skillz__category__item">{{thing.item}}</li>
           {% endfor %}
         </ul>
