--- a/_includes/background.html
+++ b/_includes/background.html
@@ -19,9 +19,9 @@
     </p>
 
     <p>
-      <strong>When I'm not in front of my laptop</strong>, I'm probably playing chess, watching Man United, or editing resumes.
+      <strong>When I'm not in front of my laptop</strong>, I'm probably playing chess, watching Man United, or writing poetry.
     </p>
 
-    <!-- {% include employment-status.html %} -->
+    {% include employment-status.html %}
   </div>
 </section>
