--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -15,4 +15,5 @@
       <a href="mailto:amit.shanbhoug@outlook.com" target="_blank" class="highlight-link">amit.shanbhoug@outlook.com</a>
     </span>
   </h3>
+  {% include employment-status.html %}
 </header>
