--- a/_includes/boardexperience.html
+++ b/_includes/boardexperience.html
@@ -16,5 +16,24 @@
     </div>
 
     <a href="{{site.resume}}" target="_blank" class="arrow-link">View My Product Resume</a>
+  
+  
   </div>
+  <div class="=section_title">Other Experience</div>
+  <div class="section__content">
+    <div class="jobs">
+      {% for job in site.data.boardexperience %}
+      <div class="job">
+        <div class="time-place">
+          <div class="job__company">
+            <a href="{{job.url}}" target="_blank">{{job.company}}</a>
+          </div>
+          <div class="job__time">{{job.time}}</div>
+        </div>
+        <div class="job__position">{{job.position}}</div>
+      </div>
+      {% endfor %}
+    </div>
+
+    <a href="{{site.resume}}" target="_blank" class="arrow-link">View My Product Resume</a>
 </section>
