--- a/_includes/boardexperience.html
+++ b/_includes/boardexperience.html
@@ -19,7 +19,7 @@
   
   
   </div>
-  <div class="=section_title">Other Experience</div>
+  <div class="=section_title"></div>
   <div class="section__content">
     <div class="jobs">
       {% for job in site.data.boardexperience %}
