--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,7 +13,7 @@
       <div class="skillz__category">
         <div class="skillz__category__label">Tools & Frameworks</div>
         <ul>
-          {% for framework in site.data.skills.tools&frameworks %}
+          {% for framework in site.data.skills.toolsframeworks %}
           <li class="skillz__category__item">{{framework.item}}</li>
           {% endfor %}
         </ul>
