Updated resume & margins

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -7,9 +7,9 @@
     </p>
 
     <p>
-      I enjoy working at the intersection of product, strategy &mdash; engineering, pairing my technical knowledge
-      with my keen eye for design to create a beautiful product. As a decisive thinker who enjoys problem solving in fast-paced environments,
-      my goal is to always build accesible and high-impact products that are scalable.
+      I enjoy working at the intersection of product, strategy &mdash; engineering, applying my technical knowledge
+      to deliberate product growth. As a decisive thinker who enjoys problem solving in fast-paced environments,
+      my goal is to always build accesible, scalable, &amp; high-impact products.
     </p>
 
     <p>
@@ -21,6 +21,6 @@
     <p>
       <strong>When I'm not in front of my laptop</strong>, I'm probably playing chess, watching Man United, or writing poetry.
     </p>
-    <!-- {% include employment-status.html %} -->
+  
   </div>
 </section>
