--- a/_includes/currentroles.html
+++ b/_includes/currentroles.html
@@ -1,8 +1,8 @@
 <section class="section experience">
-  <div class="section__title">Work Experience</div>
+  <div class="section__title">Current Roles</div>
   <div class="section__content">
     <div class="jobs">
-      {% for job in site.data.workexperience %}
+      {% for job in site.data.currentroles %}
       <div class="job">
         <div class="time-place">
           <div class="job__company">
