--- a/_includes/priorexperience.html
+++ b/_includes/priorexperience.html
@@ -1,8 +1,8 @@
 <section class="section experience">
-  <div class="section__title">Board Experience</div>
+  <div class="section__title">Prior Experience</div>
   <div class="section__content">
     <div class="jobs">
-      {% for job in site.data.boardexperience %}
+      {% for job in site.data.priorexperience %}
       <div class="job">
         <div class="time-place">
           <div class="job__company">
