--- a/_includes/other-projects.html
+++ b/_includes/other-projects.html
@@ -1,5 +1,5 @@
 <section class="section other-projects">
-  <div class="section__title">Selected Experiences</div>
+  <div class="section__title">Selected Works</div>
   <div class="section__content">
     {% for project in site.data.other-projects %}
     <div class="project">
