--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <div class="bottom">
       <span>Brittany Chiang</span>
       <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
-      <span>2018</span>
+      <span></span>
     </div>
   </div>
   <div class="footer__links">
