--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Amit Shanbhoug</span>, a product-minded developer focused on building impactful products &amp; experiences 😄.
+    <span class="name">Amit Shanbhoug</span>, a product-minded developer focused on building impactful products &amp; experiences. 🙀
     <!-- <span class="emoji technologist"></span> -->
   </h2>
 
