--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,10 +1,10 @@
 <header class="intro">
-  <h1 class="intro__hello">Howdy!
+  <h1 class="intro__hello"> Hello, <span class="name">I'm Amit Shanbhoug</span> 
     <span class="emoji wave-hand animated"></span>
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Amit Shanbhoug</span>, a product-minded developer focused on building impactful products &amp; experiences. 🙀
+    <span class="name">Amit Shanbhoug</span>, a product-minded developer focused on building impactful products &amp; experiences. 
     <!-- <span class="emoji technologist"></span> -->
   </h2>
 
