--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <header class="intro">
-  <h1 class="intro__hello"> Hello, <span class="name">I'm Amit Shanbhoug</span> 
+  <h1 class="intro__hello"> Hello, <strong>I'm Amit Shanbhoug</strong> 
     <span class="emoji wave-hand animated"></span>
   </h1>
 
