--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,8 +3,7 @@
     <span class="emoji wave-hand animated"></span>
   </h1>
 
-  <h2 class="intro__tagline">I'm
-    <span class="name">Amit Shanbhoug</span>, a product-minded developer focused on building impactful products &amp; experiences. 
+  <h2 class="intro__tagline">I enjoy working at the intersection of product, strategy & engineering - decisively & deliberately building products in fast-paced environments. 
     <!-- <span class="emoji technologist"></span> -->
   </h2>
 
