--- a/_includes/background.html
+++ b/_includes/background.html
@@ -10,7 +10,7 @@
       I enjoy working at the intersection of product, strategy & engineering - applying my technical knowledge
       to deliberate product advancement. As a decisive thinker who enjoys problem solving in fast-paced environments,
       my goal is to always build accessible, scalable, &amp; high-impact products.
-    </p> -->
+    </p> 
 
     <p>
       I enjoy working at the intersection of product, strategy & engineering - decisively & deliberately scaling products in fast-paced environments.
@@ -28,4 +28,4 @@
     </p>
  
   </div>
-</section>
+</section> -->
