--- a/_includes/background.html
+++ b/_includes/background.html
@@ -6,7 +6,7 @@
       <a class="underline-link" href="https://www.delphicresearch.ca/" target="_blank">Delphic Research</a> building in the government affairs space.
     </p>
 
-    <!-- <p>
+     <p>
       I enjoy working at the intersection of product, strategy & engineering - applying my technical knowledge
       to deliberate product advancement. As a decisive thinker who enjoys problem solving in fast-paced environments,
       my goal is to always build accessible, scalable, &amp; high-impact products.
@@ -28,4 +28,4 @@
     </p>
  
   </div>
-</section> -->
+</section>
