--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,9 +3,9 @@
     <span class="emoji wave-hand animated"></span>
   </h1>
 
-  <h3 class="intro__tagline">I enjoy working at the intersection of product, strategy & engineering - decisively & deliberately building products in fast-paced environments. 
+  <h2 class="intro__contact">I enjoy working at the intersection of product, strategy & engineering - decisively & deliberately building products in fast-paced environments. 
     <!-- <span class="emoji technologist"></span> -->
-  </h3>
+  </h2>
 
   <h3 class="intro__contact">
     <span>Get in touch </span>
