--- a/_includes/priorexperience.html
+++ b/_includes/priorexperience.html
@@ -15,7 +15,7 @@
       {% endfor %}
     </div>
 
-    <a href="{{site.productresume}}" target="_blank" class="arrow-link">View My Product Resume</a>
+    <a href="{{site.productresume}}" target="_blank" class="arrow-link">View My Product Resume</a><br>
     <a href="{{site.engineeringresume}}" target="_blank" class="arrow-link">View My Engineering Resume</a>
 
 </section>
