--- a/_includes/employment-status.html
+++ b/_includes/employment-status.html
@@ -1,8 +1,9 @@
-<!-- <a class="status" href="{{site.resume}}" target="_blank"> -->
+<!-- <a class="status" href="{{site.resume}}" target="_blank"> 
 <a class="status" href="https://www.linkedin.com/in/amitshanbhoug/" target="_blank"></a>
   <div class="status__light">
     <div class="status__light__ring"></div>
     <div class="status__light__led"></div>
   </div>
-  <div class="status__message">Currently seeking Summer 2022 opportunities!</div>
+  <div class="status__message"> Currently seeking Summer 2022 opportunities!</div>
 </a>
+-->
