--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,7 +3,7 @@
     <span class="emoji wave-hand animated"></span>
   </h1>
 
-  <h2 class="intro__tagline">I enjoy working at the intersection of product, strategy & engineering - decisively & deliberately building products in fast-paced environments. 
+  <h2 class="intro__tagline">I enjoy working at the intersection of product, strategy & engineering — decisively & deliberately building products in fast-paced environments. 
     <!-- <span class="emoji technologist"></span> -->
   </h2>
 
@@ -14,5 +14,5 @@
       <a href="mailto:amit.shanbhoug@outlook.com" target="_blank" class="highlight-link">amit.shanbhoug@outlook.com</a>
     </span>
   </h3>
-  {% include employment-status.html %} 
+  <!-- {% include employment-status.html %} -->
 </header>
