--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,18 +1,18 @@
 <header class="intro">
-  <h1 class="intro__hello"> Hello, <strong>I'm Amit Shanbhoug</strong> 
-    <span class="emoji wave-hand animated"></span>
-  </h1>
-
-  <h2 class="intro__tagline">I enjoy working at the intersection of product, strategy & engineering — decisively & deliberately building products in fast-paced environments. 
-    <!-- <span class="emoji technologist"></span> -->
-  </h2>
-
-  <h3 class="intro__contact">
-    <span>Get in touch </span>
-    <span class="emoji pointer"></span>
-    <span>
-      <a href="mailto:amit.shanbhoug@outlook.com" target="_blank" class="highlight-link">amit.shanbhoug@outlook.com</a>
-    </span>
-  </h3>
-  <!-- {% include employment-status.html %} -->
+  <div>
+    <div style="width: 70%;float: left;padding: 20px;">
+      <h1 class="intro__hello">Hello!
+        <span class="emoji wave-hand animated"></span>
+      </h1>
+      <h2 class="intro__tagline">I enjoy working at the intersection of product, strategy & engineering — decisively & deliberately building products in fast-paced environments. 
+     <!-- <span class="emoji technologist"></span> -->
+      </h2>
+      <h3 class="intro__contact">
+        <span>Get in touch </span>
+        <span class="emoji pointer"></span>
+        <span>
+        <a href="mailto:amit.shanbhoug@outlook.com" target="_blank" class="highlight-link">amit.shanbhoug@outlook.com</a>
+      </span>
+      </h3>
+      <!-- {% include employment-status.html %} -->
 </header>
