--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,7 +1,7 @@
 <header class="intro">
   <div>
     <div style="width: 70%;float: left;padding: 20px;">
-      <h1 class="intro__hello">Hello!
+      <h1 class="intro__hello">Hello I'm <b> Amit Shanbhoug </b>!
         <span class="emoji wave-hand animated"></span>
       </h1>
       <h2 class="intro__tagline">I enjoy working at the intersection of product, strategy & engineering — decisively & deliberately building products in fast-paced environments. 
