--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,30 +2,39 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm currently a Researcher at <a class="underline-link" href="https://www2.uottawa.ca/en" target="_blank">uOttawa</a> exploring SMART/IOT solutions for long-term care homes. I previously interned at 
-      <a class="underline-link" href="https://www.delphicresearch.ca/" target="_blank">Delphic Research</a> building in the government affairs space.
-    </p>
-
-     <p>
-      I enjoy working at the intersection of product, strategy & engineering - applying my technical knowledge
-      to deliberate product advancement. As a decisive thinker who enjoys problem solving in fast-paced environments,
-      my goal is to always build accessible, scalable, &amp; high-impact products.
-    </p> 
-
-    <p>
-      I enjoy working at the intersection of product, strategy & engineering - decisively & deliberately scaling products in fast-paced environments.
-    </p>
-
-
-    <p>
-      Community advancement is important to me. I am currently the Co-Chair, Board of Directors,
-      <a class="underline-link" href="https://canadianroots.ca/" target="_blank">Canadian Roots Exchange</a>, an organization committed to 
-      empowering Indigenous youth and reconciliation.
+      I'm currently a Researcher at
+      <a
+        class="underline-link"
+        href="https://www2.uottawa.ca/en"
+        target="_blank"
+        >uOttawa</a
+      >
+      exploring SMART/IOT solutions for long-term care homes. I previously
+      interned at
+      <a
+        class="underline-link"
+        href="https://www.delphicresearch.ca/"
+        target="_blank"
+        >Delphic Research</a
+      >
+      building in the government affairs space.
     </p>
 
     <p>
-      <strong>When I'm not in front of my laptop</strong>, I'm probably playing chess, watching Man United, or writing poetry.
+      I enjoy working at the intersection of product, strategy & engineering -
+      applying my technical knowledge to deliberate product advancement. As a
+      decisive thinker who enjoys problem solving in fast-paced environments, my
+      goal is to always build accessible, scalable, &amp; high-impact products.
     </p>
- 
+
+    <p>
+      I enjoy working at the intersection of product, strategy & engineering -
+      decisively & deliberately scaling products in fast-paced environments.
+    </p>
+
+    <p>
+      <strong>When I'm not in front of my laptop</strong>, I'm probably playing
+      chess, watching Man United, or writing poetry.
+    </p>
   </div>
 </section>
