--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,6 +2,13 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
+      I'm currently a Urban Tech master's student at Cornell Tech (Cornell's NYC
+      Campus) and hold an honors BSc in Computer Science from the University of
+      Ottawa.
+
+      I am interested in contributing to the development of SMART(er) cities and autonomous vehicles.
+    </p>
+    <!-- <p>
       I'm currently a Researcher at
       <a
         class="underline-link"
@@ -9,28 +16,18 @@
         target="_blank"
         >uOttawa</a
       >
-      exploring SMART/IOT solutions for long-term care homes. I previously
-      interned at
-      <a
-        class="underline-link"
-        href="https://www.delphicresearch.ca/"
-        target="_blank"
-        >Delphic Research</a
-      >
-      building in the government affairs space.
-    </p>
-
-    <p>
+      exploring SMART/IOT solutions for long-term care homes. 
+    <p> -->
       I enjoy working at the intersection of product, strategy & engineering -
       applying my technical knowledge to deliberate product advancement. As a
       decisive thinker who enjoys problem solving in fast-paced environments, my
       goal is to always build accessible, scalable, &amp; high-impact products.
     </p>
 
-    <p>
+    <!-- <p>
       I enjoy working at the intersection of product, strategy & engineering -
       decisively & deliberately scaling products in fast-paced environments.
-    </p>
+    </p> -->
 
     <p>
       <strong>When I'm not in front of my laptop</strong>, I'm probably playing
